<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normalMargin"
        android:text="@string/welcomeText"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:src="@drawable/picture"
        android:backgroundTint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/decimalNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normalMargin"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/edit_text"
        android:backgroundTint="@color/lightGrey"
        android:hint="@string/enter_your_decimal_number"
        android:inputType="numberDecimal"
        android:padding="@dimen/normalPadding"
        android:textSize="@dimen/normalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/binaryNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normalMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/edit_text"
        android:hint="@string/enter_binary_number"
        android:inputType="numberDecimal"
        android:padding="@dimen/normalPadding"
        android:textSize="@dimen/normalText"
        android:backgroundTint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="@+id/decimalNumber"
        app:layout_constraintStart_toStartOf="@+id/decimalNumber"
        app:layout_constraintTop_toBottomOf="@+id/decimalNumber"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/hexNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normalMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/edit_text"
        android:hint="@string/enter_hex_number"
        android:inputType="numberDecimal"
        android:padding="@dimen/normalPadding"
        android:textSize="@dimen/normalText"
        android:backgroundTint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="@+id/octNumber"
        app:layout_constraintStart_toStartOf="@+id/octNumber"
        app:layout_constraintTop_toBottomOf="@+id/octNumber"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/octNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normalMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@drawable/edit_text"
        android:hint="@string/enter_octal_number"
        android:inputType="number"
        android:padding="@dimen/normalPadding"
        android:textSize="@dimen/normalText"
        android:backgroundTint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="@+id/binaryNumber"
        app:layout_constraintStart_toStartOf="@+id/binaryNumber"
        app:layout_constraintTop_toBottomOf="@+id/binaryNumber"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:onClick="onClickSubmitButton"
        android:text="@string/submit_button"
        android:textSize="@dimen/buttonText"
        app:layout_constraintEnd_toEndOf="@+id/hexNumber"
        app:layout_constraintStart_toStartOf="@+id/hexNumber"
        app:layout_constraintTop_toBottomOf="@+id/hexNumber" />


    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:onClick="onClickSubmitButton"
        android:text="@string/clear_all_button"
        android:textSize="@dimen/buttonText"
        app:layout_constraintEnd_toEndOf="@+id/submit"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/submit"
        app:layout_constraintTop_toBottomOf="@+id/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>